[project]
name = "stream"
version = "0.6.0"
description = "Groundlight Stream Processor - Container for analyzing video using RTSP etc"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "framegrab>=0.8.0",
    "groundlight>=0.20.0",
    "jsonformatter>=0.3.2",
    "numpy<2.0.0",
    "opencv-python-headless>=4.10.0.84",
    "PyYAML==6.0.2",
    "streamlink==7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff==0.7.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
stream = ["logging.yaml"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]

[tool.ruff]
exclude = ["__init__.py"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "PL", "UP"] # https://beta.ruff.rs/docs/rules/
ignore = [
    "E501",  # Line length too long (handled by formatter)
]
fixable = ["ALL"]  # Allow autofix behavior
unfixable = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
