[project]
name = "stream"
version = "0.5.3"
description = "Groundlight Stream Processor - Container for analyzing video using RTSP etc"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "framegrab>=0.11.3",
    "groundlight>=0.23.3",
    "jsonformatter>=0.3.4",
    "numpy<2.0.0",
    "opencv-python-headless>=4.11.0.86",
    "PyYAML==6.0.2",
    "streamlink==7.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff==0.7.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
stream = ["logging.yaml"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]

[tool.ruff]
exclude = ["__init__.py"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "PL", "UP"] # https://beta.ruff.rs/docs/rules/
ignore = [
    "E501",  # Line length too long (handled by formatter)
]
fixable = ["ALL"]  # Allow autofix behavior
unfixable = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
